--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <label>First name:</label><br />
       <input type="text" name="name" /><br />
       <label>Last name:</label><br />
-      <input type="text" name="last name" /><br /><br />
+      <input type="text" name="last_name" /><br /><br />
       <input type="submit" value="Submit" />
     </form>
   </body>
